AWS CloudFormation/my-first-project/my-web-stack.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: A web stack for my-first-project to understand and learn AWS CloudFormation 

Parameters:
  
  NetworkStackName:
    Type: String
    Default: my-Vpc-Stack
    Description: Stack name for the network stack.
  
  KeyName:
    Type: String
    Default: aws_first_key
    Description: AWS key name for SSH connection to server.


Resources:  

#  myWebEC2:
#    Type: AWS::EC2::Instance
#    Properties:
#      SecurityGroupIds:
#        - !GetAtt myWebSGP.GroupId
#      KeyName: !Ref KeyName
#      ImageId: ami-00b8d9cb8a7161e41
#      InstanceType: t2.micro
#      SubnetId: 
#        Fn::ImportValue:
#          !Sub "${NetworkStackName}-SubnetID-PrivateSubnet1a"

  myWebASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub '${AWS::StackName}-auto-scaling-group'
      MinSize: 3
      MaxSize: 3
      DesiredCapacity: 3
      HealthCheckGracePeriod: 90
      AvailabilityZones:
        - !Select
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
        - !Select
          - 1
          - Fn::GetAZs: !Ref 'AWS::Region'
        - !Select
          - 2
          - Fn::GetAZs: !Ref 'AWS::Region'
      VPCZoneIdentifier:
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PrivateSubnet1a"
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PrivateSubnet1b"
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PrivateSubnet1c"
      LaunchTemplate: 
        LaunchTemplateId: !Ref myWebLaunchTemplate
        Version: !GetAtt myWebLaunchTemplate.DefaultVersionNumber
      TargetGroupARNs:
        - !Ref myWebApplicationLoadBalancerTargetGroup
      


  myWebLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template-for-auto-scaling'
      LaunchTemplateData:
        KeyName: !Ref KeyName
        ImageId: ami-00b8d9cb8a7161e41
        InstanceType: t2.micro
        SecurityGroupIds:
          - !GetAtt myWebSGP.GroupId
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash -ex
            sudo su;
            yum update -y;
            yum install httpd -y;
            service httpd start;
            systemctl enable httpd;
            echo "Hello world from $(hostname -f)<p>$(curl -s  http://169.254.169.254/latest/dynamic/instance-identity/document/)</p>" >/var/www/html/index.html;

  
  myWebApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Scheme: internet-facing
      SecurityGroups:
        - !Ref myWebALBSGP
      Subnets:
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PublicSubnet1a"
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PublicSubnet1b"
        - Fn::ImportValue: !Sub "${NetworkStackName}-SubnetID-PublicSubnet1c"


  myWebApplicationLoadBalancerHTTPListerner:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups: 
              - TargetGroupArn: !Ref myWebApplicationLoadBalancerTargetGroup
      LoadBalancerArn: !Ref myWebApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  
  myWebApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: !Sub "${NetworkStackName}-VPCID"
      TargetType: instance


  myWebSGP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH (TCP 22) & HTTP (TCP 80) to instance.
      VpcId: 
        Fn::ImportValue: !Sub "${NetworkStackName}-VPCID"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

  myWebALBSGP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP (TCP 80) to Load Balancer.
      VpcId: 
        Fn::ImportValue: !Sub "${NetworkStackName}-VPCID"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
